syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.edu.grpc;
import "google/protobuf/timestamp.proto";

service KeymanagerGrpcService {

  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}

  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}

  rpc carrega(CarregaChavePixRequest) returns (CarregaChavePixResponse) {}

}

/**
 * Se nenhum tipo for especificado, assume-se o tipo de chave CPF.
 */
enum TipoDeChave {
  CPF       = 0;
  CELULAR   = 1;
  EMAIL     = 2;
  ALEATORIA = 3;
}

/**
 * Se nenhum tipo for especificado, assume-se o tipo de conta CONTA_CORRENTE.
 */
enum TipoDeConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message RegistraChavePixRequest {
  string clienteId        = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId     = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}

message CarregaChavePixRequest {
  string clienteId = 1;
  oneof filtro {
    string pixId = 2;
    string chave = 3;
  }
}

message CarregaChavePixResponse {

  message ChavePix {

    message ContaInfo {
      TipoDeConta tipo     = 1;
      string instituicao   = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }

    string pixId            = 1;
    TipoDeChave tipo        = 2;
    string chave            = 3;
    ContaInfo conta         = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId = 1;
  ChavePix chave   = 2;
}